golden/error/runtime_collection_kv_scalar.test
{
  "key": "value",
  "single",
}

# output:
 --> stdin:3:2
  |
3 |   "single",
  |   ^~~~~~~~
Error: Expected key-value, not a scalar element.
